--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Bajs</title>
+    <title>BAJS</title>
   </head>
   <body>
-
+    <h1>capital</h1>
   </body>
 </html>
