--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>BAJS</title>
   </head>
   <body>
-    <h2>this is the background
+    <h2>this is the background color, like what is this
     </h2>
     <h1>capital</h1>
   </body>
