--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>BAJS</title>
+    <title>Gradient Background</title>
+    <link rel="stylesheet" href="style.css">
+    </script>
   </head>
-  <body>
-    <h2>this is the background color, like what is this!
-    </h2>
-    <h1>capital!!!</h1>
+  <body id="gradient">
+    <h1>Background Generator</h1>
+    <h2>Current CSS background</h2>
+    <input type="color" name="color1" class="color1" value="#00ff00">
+    <input type="color" name="color2" class="color2" value="#ffff00">
+    <h3></h3>
+    <script type="text/javascript" src="script.js">
+
+    </script>
   </body>
 </html>
